# maui

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/: grpc_config.cmake
docs/: readme.md
docs/fmcw_radar/: fmcw_radar.mlx
examples/: CMakeLists.txt
examples/axi4s_vfifo_buffer/v1.0.0.0/: readme.md
examples/axi4s_vfifo_buffer/v1.0.0.0/kcu105/: create_inst.tcl  readme.md
examples/core0/: CMakeLists.txt  api_export.h  event.h  readme.md  timer.h  types.h
examples/core1/: aligned_allocation.h  aligned_transfer.h  file_utils.h  readme.md  string_utils.h  url.h
examples/core2/: uinput.cpp
examples/fmcw_radar/: fmcw_radar.html  fmcw_radar.mlx  readme.md
examples/grpc_utils/: CMakeLists.txt  readme.md
examples/grpc_utils/cpp/: CMakeLists.txt  client_context.hpp  client_listener.hpp  client_macros.h  client_unary_async.hpp  conversions.h  server_async_writer.hpp  server_macros.h  server_unary_reactor.h
examples/hdl/: dram_buffered_arbiter.v  sreg.sv  sreg.vhd
examples/microcom/: CMakeLists.txt  microcom.cpp
examples/pulsed_radar/: .gitignore  pulsed_radar.h  readme.md  rx_if.cpp  rx_if.h  tx_if.h
examples/serialport/: CMakeLists.txt  readme.md  serialport.cpp  serialport.h  serialport_microterm.cpp  serialport_test.cpp
ext/: LICENSE-3RD-PARTY.md  licences.md
ext/concurrentqueue/: .gitignore
ext/grpc/: readme.md
scripts/: readme.md
scripts/cpp/: build_all.sh  build_cpp_examples.sh  build_ext_grpc.sh  build_maui.sh  cmake_builder.sh
scripts/setup/: set_env_development.sh
src/: CMakeLists.txt  readme.md
src/libs/: CMakeLists.txt  readme.md
src/libs/core0/: api_export.h  timer.h
src/libs/core1/: CMakeLists.txt  file_utils.cpp  io_ring.hpp  posix_memalign_xp.h  string_utils.cpp  url.cpp
src/libs/core2/: CMakeLists.txt  uinput.cpp  uinput.h
src/libs/hdl_examples/: freq_comb_generator.v  sreg.v  sreg.vhd  sreg_tb.v
src/libs/pulsed_radar/: pulsed_radar.cpp  pulsed_radar_tb.cpp  readme.md  run_hls.tcl  tx_if.cpp
src/libs/serialport/: CMakeLists.txt  attocom.cpp  readme.md  serialport.cpp  serialport.h
